add : user session

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -644,6 +644,10 @@ video {
   top: 50%;
 }
 
+.left-28 {
+  left: 7rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -749,6 +753,10 @@ video {
 
 .mt-auto {
   margin-top: auto;
+}
+
+.ml-4 {
+  margin-left: 1rem;
 }
 
 .block {
@@ -1177,11 +1185,6 @@ video {
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
-}
-
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
 }
 
 .py-10 {
@@ -1788,11 +1791,6 @@ video {
 }
 
 @media (prefers-color-scheme: dark) {
-  .dark\:divide-gray-600 > :not([hidden]) ~ :not([hidden]) {
-    --tw-divide-opacity: 1;
-    border-color: rgb(75 85 99 / var(--tw-divide-opacity));
-  }
-
   .dark\:border {
     border-width: 1px;
   }
